--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
       <input type="email" name="email" id="email" required />
       <label for="message" style="color: #000;">Mensaje</label>
       <textarea name="message" id="message" required rows="2"></textarea>
+      <!-- Redirección a página de agradecimiento -->
       <input type="hidden" name="_redirect" value="https://elgritcast.com/gracias.html">
       <button type="submit">Enviar</button>
     </form>
