--- a/episodios/index.html
+++ b/episodios/index.html
@@ -9,9 +9,7 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: url('../assets/fondo-episodios.jpg') no-repeat center center;
-      background-size: cover;
-      background-attachment: fixed;
+      background-color: #000;
       color: #ffffff;
     }
 
@@ -52,7 +50,7 @@
     }
 
     .episodio {
-      background: rgba(0, 0, 0, 0.65);
+      background: rgba(255, 255, 255, 0.05);
       margin: 0.5rem auto;
       padding: 0.7rem;
       border-radius: 8px;
