--- a/episodios/index.html
+++ b/episodios/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #000;
+      background-color: #111;
       color: #ffffff;
     }
 
@@ -21,7 +21,7 @@
     }
 
     h1 {
-      font-size: 1.8rem;
+      font-size: 2rem;
       margin: 0;
     }
 
@@ -29,7 +29,7 @@
       background: transparent;
       border: 2px solid #b8fc26;
       color: #b8fc26;
-      padding: 0.4rem 0.8rem;
+      padding: 0.5rem 1rem;
       border-radius: 30px;
       cursor: pointer;
       font-weight: bold;
@@ -42,7 +42,7 @@
     }
 
     .search-container input {
-      padding: 0.4rem;
+      padding: 0.5rem;
       border-radius: 20px;
       border: none;
       width: 80%;
@@ -50,22 +50,22 @@
     }
 
     .episodio {
-      background: rgba(255, 255, 255, 0.05);
-      margin: 0.5rem auto;
-      padding: 0.7rem;
-      border-radius: 8px;
+      background: #1c1c1c;
+      margin: 1rem auto;
+      padding: 0.8rem;
+      border-radius: 10px;
       max-width: 600px;
-      font-size: 0.9rem;
-      box-shadow: 0 0 6px rgba(184, 252, 38, 0.15);
+      box-shadow: 0 0 10px rgba(184, 252, 38, 0.1);
     }
 
     .episodio h2 {
-      font-size: 1rem;
-      margin-bottom: 0.4rem;
+      margin: 0 0 0.3rem 0;
+      font-size: 1.1rem;
     }
 
     .episodio p {
       margin: 0.2rem 0;
+      font-size: 0.95rem;
     }
 
     .episodio audio {
@@ -89,7 +89,7 @@
 
   <header>
     <h1>Episodios</h1>
-    <a class="volver-btn" href="../index.html">← Volver</a>
+    <a class="volver-btn" href="/">← Volver</a>
   </header>
 
   <div class="search-container">
@@ -98,7 +98,6 @@
 
   <div id="episodios-container">
 
-    <!-- Episodio 1 -->
     <div class="episodio">
       <h2>Ep. 1 — Diego Cisneros</h2>
       <p><strong>Título:</strong> Nadar, Pedalear, Correr… y No Rendirse</p>
@@ -110,7 +109,6 @@
       </audio>
     </div>
 
-    <!-- Episodio 2 -->
     <div class="episodio">
       <h2>Ep. 2 — Lilia Freitas</h2>
       <p><strong>Título:</strong> Superviviente del Cáncer nos cuenta su motivadora historia</p>
@@ -122,7 +120,6 @@
       </audio>
     </div>
 
-    <!-- Episodio 3 -->
     <div class="episodio">
       <h2>Ep. 3 — José Manuel Rodríguez</h2>
       <p><strong>Título:</strong> Crítica literaria y pasión por el arte</p>
@@ -130,6 +127,28 @@
       <p class="tags">Literatura, Gabriel García Márquez</p>
       <audio controls>
         <source src="https://pub-588137ed925246f1a847e7b1a862df78.r2.dev/elgritcast-ep-003-jose-manuel-rodriguez-ID3.MP3" type="audio/mpeg">
+        Tu navegador no soporta audio HTML.
+      </audio>
+    </div>
+
+    <div class="episodio">
+      <h2>Ep. 4 — José Luís Rodríguez</h2>
+      <p><strong>Título:</strong> El UTMB: “No hay otra carrera con ese nivel”.</p>
+      <p><strong>Fecha:</strong> 2024-10-31</p>
+      <p class="tags">Trailrunning, Ultra maratón, Montaña</p>
+      <audio controls>
+        <source src="https://pub-588137ed925246f1a847e7b1a862df78.r2.dev/elgritcast-ep-004-jose-luis-rodriguez-ID3.MP3" type="audio/mpeg">
+        Tu navegador no soporta audio HTML.
+      </audio>
+    </div>
+
+    <div class="episodio">
+      <h2>Ep. 5 — Mayra Santos</h2>
+      <p><strong>Título:</strong> ¿Te has preguntado cómo alguien sobrevive 31 horas nadando sin parar?</p>
+      <p><strong>Fecha:</strong> 2024-11-07</p>
+      <p class="tags">Open Water Swimming, Grit, Guinness</p>
+      <audio controls>
+        <source src="https://pub-588137ed925246f1a847e7b1a862df78.r2.dev/elgritcast-ep-005-mayra-santos-ID3.MP3" type="audio/mpeg">
         Tu navegador no soporta audio HTML.
       </audio>
     </div>
