--- a/episodios/index.html
+++ b/episodios/index.html
@@ -21,7 +21,8 @@
     }
 
     header img {
-      height: 40px;
+      height: 48px;
+      width: auto;
     }
 
     .volver-btn {
@@ -82,7 +83,7 @@
 
   <header>
     <a href="../index.html">
-      <img src="../assets/el_grit_cast_cube_sin_fondo.png" alt="El Grit Cast logo">
+      <img src="../assets/el_grit_cast_cube_sin_fondo copia.png" alt="Logo El Grit Cast" title="Volver al inicio">
     </a>
     <a class="volver-btn" href="../index.html">← Volver</a>
   </header>
@@ -92,7 +93,55 @@
   </div>
 
   <div id="episodios-container">
-    <!-- Aquí el script insertará los episodios automáticamente -->
+    <div class="episodio">
+      <h2>Episodio 001: Nadar, Pedalear, Correr… y No Rendirse</h2>
+      <p><strong>Invitado:</strong> Diego Cisneros</p>
+      <p><strong>Fecha:</strong> 2024-10-10</p>
+      <p class="tags">Temas: Triatlón, Correr, Competencia</p>
+      <audio controls>
+        <source src="https://pub-588137ed925246f1a847e7b1a862df78.r2.dev/elgritcast-ep-001-diego-cisneros-ID3.MP3" type="audio/mpeg">
+      </audio>
+    </div>
+
+    <div class="episodio">
+      <h2>Episodio 002: Superviviente del Cáncer nos cuenta su motivadora historia</h2>
+      <p><strong>Invitado:</strong> Lilia Freitas</p>
+      <p><strong>Fecha:</strong> 2024-10-17</p>
+      <p class="tags">Temas: Cáncer, Resiliencia</p>
+      <audio controls>
+        <source src="https://pub-588137ed925246f1a847e7b1a862df78.r2.dev/elgritcast-ep-002-lilia-freitas-ID3.MP3" type="audio/mpeg">
+      </audio>
+    </div>
+
+    <div class="episodio">
+      <h2>Episodio 003: Crítica literaria y pasión por el arte</h2>
+      <p><strong>Invitado:</strong> José Manuel Rodríguez</p>
+      <p><strong>Fecha:</strong> 2024-10-24</p>
+      <p class="tags">Temas: Literatura, Gabriel García Márquez</p>
+      <audio controls>
+        <source src="https://pub-588137ed925246f1a847e7b1a862df78.r2.dev/elgritcast-ep-003-jose-manuel-rodriguez-ID3.MP3" type="audio/mpeg">
+      </audio>
+    </div>
+
+    <div class="episodio">
+      <h2>Episodio 004: El UTMB: “No hay otra carrera con ese nivel”.</h2>
+      <p><strong>Invitado:</strong> José Luís Rodríguez</p>
+      <p><strong>Fecha:</strong> 2024-10-31</p>
+      <p class="tags">Temas: Trailrunning, Ultra maratón, Montaña</p>
+      <audio controls>
+        <source src="https://pub-588137ed925246f1a847e7b1a862df78.r2.dev/elgritcast-ep-004-jose-luis-rodriguez-ID3.MP3" type="audio/mpeg">
+      </audio>
+    </div>
+
+    <div class="episodio">
+      <h2>Episodio 005: ¿Te has preguntado cómo alguien sobrevive 31 horas nadando sin parar?</h2>
+      <p><strong>Invitado:</strong> Mayra Santos</p>
+      <p><strong>Fecha:</strong> 2024-11-07</p>
+      <p class="tags">Temas: Open Water Swimming, Grit, Guinness</p>
+      <audio controls>
+        <source src="https://pub-588137ed925246f1a847e7b1a862df78.r2.dev/elgritcast-ep-005-mayra-santos-ID3.MP3" type="audio/mpeg">
+      </audio>
+    </div>
   </div>
 
   <div class="no-results" id="no-results" style="display: none;">
