--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>El Grit Cast</title>
+
+  <!-- Google Search Console -->
+  <meta name="google-site-verification" content="29Tyu8Xpd_rbET3ok-Rd7mvHfxsWeNUdXZ2LcAeeR0M" />
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * {
